[metadata]
name = plover_split_at_apostrophe
version = 0.0.2
description = Companion plugin for BépoSténo - split words at apostrophekeys and punctuations.
author = AntoineBalaine
license = MIT
url = https://github.com/elkowar/plover_split_at_apostrophe
keywords = plover_plugin plover bépo steno

[options]
zip_safe = True
include_package_data = True
install_requires =
    plover>=4.0.0.dev6

packages = 
    plover_split_at_apostrophe

[options.entry_points]
plover.macro =
    split_word_at_apostrophe = plover_split_at_apostrophe:split_word_at_apostrophe
